// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToastContainer component snapshots > error toast 1`] = `
"<div data-v-dd40d1fc="" class="toast-container">
  <div data-v-dd40d1fc="" class="toast toast--error" role="alert" aria-live="assertive" aria-atomic="true">
    <div data-v-dd40d1fc="" class="toast__icon" aria-hidden="true"></div>
    <div data-v-dd40d1fc="" class="toast__content">
      <p data-v-dd40d1fc="" class="toast__message">Upload failed: invalid file type</p>
    </div><button data-v-dd40d1fc="" class="toast__close" aria-label="Dismiss notification" type="button"><span data-v-dd40d1fc="" class="icon icon--sm icon-close" aria-hidden="true"></span></button>
  </div>
</div>"
`;

exports[`ToastContainer component snapshots > info toast 1`] = `
"<div data-v-dd40d1fc="" class="toast-container">
  <div data-v-dd40d1fc="" class="toast toast--info" role="status" aria-live="polite" aria-atomic="true">
    <div data-v-dd40d1fc="" class="toast__icon" aria-hidden="true"></div>
    <div data-v-dd40d1fc="" class="toast__content">
      <p data-v-dd40d1fc="" class="toast__message">Processing session...</p>
    </div><button data-v-dd40d1fc="" class="toast__close" aria-label="Dismiss notification" type="button"><span data-v-dd40d1fc="" class="icon icon--sm icon-close" aria-hidden="true"></span></button>
  </div>
</div>"
`;

exports[`ToastContainer component snapshots > multiple toasts stacked 1`] = `
"<div data-v-dd40d1fc="" class="toast-container">
  <div data-v-dd40d1fc="" class="toast toast--success" role="status" aria-live="polite" aria-atomic="true">
    <div data-v-dd40d1fc="" class="toast__icon" aria-hidden="true"></div>
    <div data-v-dd40d1fc="" class="toast__content">
      <p data-v-dd40d1fc="" class="toast__message">Upload complete</p>
    </div><button data-v-dd40d1fc="" class="toast__close" aria-label="Dismiss notification" type="button"><span data-v-dd40d1fc="" class="icon icon--sm icon-close" aria-hidden="true"></span></button>
  </div>
  <div data-v-dd40d1fc="" class="toast toast--error" role="alert" aria-live="assertive" aria-atomic="true">
    <div data-v-dd40d1fc="" class="toast__icon" aria-hidden="true"></div>
    <div data-v-dd40d1fc="" class="toast__content">
      <p data-v-dd40d1fc="" class="toast__message">Another warning</p>
    </div><button data-v-dd40d1fc="" class="toast__close" aria-label="Dismiss notification" type="button"><span data-v-dd40d1fc="" class="icon icon--sm icon-close" aria-hidden="true"></span></button>
  </div>
  <div data-v-dd40d1fc="" class="toast toast--info" role="status" aria-live="polite" aria-atomic="true">
    <div data-v-dd40d1fc="" class="toast__icon" aria-hidden="true"></div>
    <div data-v-dd40d1fc="" class="toast__content">
      <p data-v-dd40d1fc="" class="toast__message">FYI</p>
    </div><button data-v-dd40d1fc="" class="toast__close" aria-label="Dismiss notification" type="button"><span data-v-dd40d1fc="" class="icon icon--sm icon-close" aria-hidden="true"></span></button>
  </div>
</div>"
`;

exports[`ToastContainer component snapshots > success toast 1`] = `
"<div data-v-dd40d1fc="" class="toast-container">
  <div data-v-dd40d1fc="" class="toast toast--success" role="status" aria-live="polite" aria-atomic="true">
    <div data-v-dd40d1fc="" class="toast__icon" aria-hidden="true"></div>
    <div data-v-dd40d1fc="" class="toast__content">
      <p data-v-dd40d1fc="" class="toast__message">Session uploaded successfully</p>
    </div><button data-v-dd40d1fc="" class="toast__close" aria-label="Dismiss notification" type="button"><span data-v-dd40d1fc="" class="icon icon--sm icon-close" aria-hidden="true"></span></button>
  </div>
</div>"
`;
